# kami-engine

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  TESTING.md  bb.edn
.cargo/: config.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
90-docs/adr/: 0032-gltf-asset-extension-decoders.md  0035-kami-clj-clojure-wasm-game-scripting.md  (+12 more)
docs/: adapter-registry.edn
kami-app-animeka-timeline/: Cargo.toml
kami-app-animeka-timeline/src/: lib.rs  onion_skin.rs  xsheet.rs
kami-app-bim/: Cargo.toml
kami-app-bim/src/: lib.rs
kami-app-cad/: Cargo.toml
kami-app-cad/src/: lib.rs
kami-app-car-sim/: Cargo.toml  README.md
kami-app-car-sim/src/: lib.rs  shader.wgsl
kami-app-giemon/: Cargo.toml
kami-app-giemon-factory/: Cargo.toml
kami-app-giemon-factory/src/: lib.rs  scene.rs
kami-app-giemon/src/: lib.rs  mold_field.rs
kami-app-isekai/: Cargo.toml
kami-app-isekai/src/: lib.rs  omniverse.rs  pipelines.rs
kami-app-live/: Cargo.toml
kami-app-live/src/: lib.rs
kami-app-quarry-walk/: Cargo.toml
kami-app-quarry-walk/src/: lib.rs
kami-app-sarutahiko-factory/: Cargo.toml
kami-app-sarutahiko-factory/src/: lib.rs  scene.rs
kami-app-shibuya/: Cargo.toml
kami-app-shibuya/src/: lib.rs
kami-app-sip-clj/: deps.edn  package-lock.json  shadow-cljs.edn  wrangler.jsonc
kami-app-tatekata/: Cargo.toml
kami-app-tatekata/src/: deposit_field.rs  lib.rs  process.rs  weld_field.rs
kami-articulated-scene/: Cargo.toml
kami-articulated-scene/src/: lib.rs
kami-atmosphere-scene/: Cargo.toml  README.md
kami-atmosphere-scene/src/: lib.rs
kami-atmosphere-scene/tests/: weather_parity.rs
kami-autodrive/: Cargo.toml  README.md
kami-autodrive-scene/: Cargo.toml  README.md
kami-autodrive-scene/src/: lib.rs
kami-autodrive-scene/tests/: class_parity.rs
kami-autodrive/benches/: autopilot.rs
kami-autodrive/examples/: drive_to_goal.rs  nagi_voyage.rs  render_run.rs
kami-autodrive/src/: autopilot.rs  classes.rs  control.rs  dynamics.rs  estimator.rs  fleet.rs  lib.rs  perception.rs  planner.rs  plant.rs  types.rs  vehicle_adapter.rs
kami-autodrive/tests/: camera_perception.rs  camera_reflex.rs  city_scale.rs  closed_loop.rs  determinism.rs  dynamic_obstacle.rs  dynamics_loop.rs  edge_cases.rs  estimator_drive.rs  estimator_loop.rs  fusion.rs  hetero_fleet.rs  loiter.rs  multi_agent.rs  nagi_zero_emission_voyage.rs  physics_invariants.rs  sensor_noise.rs  soft_body.rs
kami-cad/: Cargo.toml
kami-cad/src/: lib.rs
kami-cae/: Cargo.toml
kami-cae/src/: lib.rs
kami-cam/: Cargo.toml
kami-cam/src/: gcode.rs  lib.rs  stock.rs  tests.rs  tool.rs  toolpath.rs
kami-character/: Cargo.toml
kami-character-scene/: Cargo.toml  README.md
kami-character-scene/src/: anim_blueprint.rs  face_rig.rs  lib.rs
kami-character-scene/tests/: hair_parity.rs
kami-character/examples/: gen_glb.rs  gen_parts.rs
kami-character/src/: anim_blueprint.rs  base_mesh.rs  blendshape.rs  body.rs  control_rig.rs  dna.rs  export.rs  groom.rs  hair.rs  hair_gen.rs  lib.rs  material.rs  metahuman.rs  params.rs  skeletal_mesh.rs
kami-clj/: Cargo.toml
kami-clj-host/: .gitignore  Cargo.toml
kami-clj-host/demo/: app.js  index.html
kami-clj-host/src/: frame.rs  host.rs  lib.rs
kami-clj-play/: Cargo.toml
kami-clj-play/games/waves/: README.md  logic.clj  scene.edn
kami-clj-play/src/: main.rs
kami-clj-play3d/: Cargo.toml
kami-clj-play3d/games/dance/: README.md  author.clj  logic.clj  scene.edn
kami-clj-play3d/games/dance/models/: README.md
kami-clj-play3d/games/royale/: logic.clj  scene.edn
kami-clj-play3d/src/: main.rs
kami-clj/examples/: compile_demo.rs
kami-clj/src/: ast.rs  codegen.rs  component.rs  lib.rs  run.rs
kami-clj/tests/: basic.rs
kami-core/: Cargo.toml
kami-dec/: Cargo.toml
kami-dec/benches/: ns_vs_rule.rs
kami-dec/src/: lib.rs
kami-demo/: Cargo.toml
kami-demo/src/: main.rs  net_demo.rs
kami-devtools/: Cargo.toml
kami-dft/: Cargo.toml
kami-dft/src/: atpg.rs  bist.rs  jtag.rs  lib.rs  scan.rs
kami-eda/: Cargo.toml
kami-eda/src/: lib.rs
kami-eng-core/: Cargo.toml
kami-eng-io/: Cargo.toml
kami-eng-render/: Cargo.toml
kami-eng-web/: Cargo.toml  test-visual.html
kami-engine/: Cargo.toml
kami-engine-clj/: Cargo.toml
kami-engine-sdk/: .gitignore  .gitrepo  CHANGELOG.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
kami-engine-sdk-clj/: .gitignore  ARCHITECTURE.md
kami-flow/: Cargo.toml
kami-game/: Cargo.toml
kami-game-scene/: Cargo.toml  README.md
kami-groot/: Cargo.toml  README.md
kami-hydrogen-electrolysis-sim/: README.md  pyproject.toml
kami-input-scene/: Cargo.toml  README.md
kami-knp/: Cargo.toml
kami-live/: Cargo.toml  README.md
kami-mangaka-genko-clj/: README.md  deps.edn  package-lock.json
kami-mangaka-page-clj/: README.md  deps.edn
kami-mangaka-render-clj/: README.md  bb.edn  deps.edn
kami-mangaka-scene/: Cargo.toml  pyproject.toml
kami-mangaka-scene-clj/: README.md  bb.edn  deps.edn
kami-map/: Cargo.toml  compare.html  test.html
kami-mesher/: Cargo.toml
kami-mine-ai/: Cargo.toml
kami-mine-pds/: Cargo.toml
kami-nerf/: Cargo.toml
kami-os/: Cargo.toml
kami-pathfind/: Cargo.toml
kami-pdk/: Cargo.toml
kami-physics-2d/: Cargo.toml
kami-pipelines/: Cargo.toml
kami-pkg/: Cargo.toml
kami-pnr/: Cargo.toml
kami-postfx/: Cargo.toml
kami-postfx-scene/: Cargo.toml  README.md
kami-power/: Cargo.toml
kami-render/: Cargo.toml
kami-rtc/: Cargo.toml
kami-scene/: Cargo.toml
kami-script-runtime/: Cargo.toml
kami-sensor-sim/: Cargo.toml
kami-skeleton-scene/: Cargo.toml  README.md
kami-teleop/: Cargo.toml  README.md
kami-terrain-scene/: Cargo.toml  README.md
kami-vegetation-scene/: Cargo.toml  README.md
kami-vehicle-scene/: Cargo.toml  README.md
kami-web/: Cargo.toml  clj-demo.html  clj-demo.wasm
kami-web-modelb/: Cargo.toml
kami-webgpu-rs/: Cargo.toml
scripts/: check_adapter_registry.clj  test-script-backends.sh  test-wasm.sh  wit_test.clj
(+555 files in other folders)
