[workspace]
resolver = "2"
members = [
    "kami-core",
    "kami-knp",
    "kami-render",
    "kami-voxel",
    "kami-sdf",
    "kami-nerf",
    "kami-mesher",
    "kami-gltf",
    "kami-scad",
    "kami-engine",
    "kami-game",
    "kami-geo",
    "kami-map",
    "kami-web",
    "kami-graph",
    "kami-text",
    "kami-ui-gpu",
    "kami-physics-2d",
    "kami-vehicle",
    "kami-tilemap",
    "kami-audio",
    "kami-pathfind",
    "kami-skeleton",
    "kami-character",
    "kami-scene-graph",
    "kami-postfx",
    "kami-input",
    "kami-devtools",
    "kami-demo",
    "kami-vrm",
    "kami-rtc",
    "kami-bridge",
    "kami-os",
    "kami-eng-core",
    "kami-eng-render",
    "kami-eda",
    "kami-cad",
    "kami-cad-import",
    "kami-cam",
    "kami-rtl",
    "kami-cae",
    "kami-eng-io",
    "kami-eng-web",
    "kami-mine-pds",
    "kami-mine-ai",
    "kami-pnr",
    "kami-dft",
    "kami-spice",
    "kami-pdk",
    "kami-verify",
    "kami-power",
    "kami-si",
    "kami-pkg",
    "kami-yield",
    "kami-ip",
    "kami-flow",
    "kami-terrain",
    "kami-atmosphere",
    "kami-vegetation",
    "kami-app",
    "kami-pipelines",
    "kami-dec",
    "kami-app-isekai",
    "kami-app-quarry-walk",
    "kami-app-car-sim",
    "kami-app-animeka-timeline",
    "kami-app-maps3d",
    "kami-bim",
    "kami-app-cad",
    "kami-app-bim",
    "kami-app-giemon",
    "kami-live",
    "kami-app-live",
    "kami-mangaka-scene",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
hecs = "0.10"
glam = { version = "0.29", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "2"
ring = "0.17"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rapier3d = { version = "0.22", features = ["simd-nightly"] }
wasm-bindgen = "0.2"
