[workspace]
resolver = "2"
members = [
    # CLJ/EDN game layer (ADR-0035/0037/0038): kami-engine-clj = language/compiler,
    # kami-script-runtime = host, kami-clj-play = native player, kami-clj-host = sdk-clj GPU bridge.
    "kami-engine-clj",
    "kami-clj-host",
    "kami-script-runtime",
    "kami-clj-play",
    "kami-clj-play3d",
    "kami-scene",
    "kami-core",
    "kami-knp",
    "kami-render",
    "kami-voxel",
    "kami-sdf",
    "kami-nerf",
    "kami-mesher",
    "kami-gltf",
    "kami-scad",
    "kami-engine",
    "kami-game",
    "kami-geo",
    "kami-map",
    "kami-web",
    "kami-graph",
    "kami-text",
    "kami-ui-gpu",
    "kami-physics-2d",
    "kami-vehicle",
    "kami-vehicle-scene",
    "kami-atmosphere-scene",
    "kami-terrain-scene",
    "kami-vegetation-scene",
    "kami-postfx-scene",
    "kami-autodrive-scene",
    "kami-character-scene",
    "kami-game-scene",
    "kami-input-scene",
    "kami-skeleton-scene",
    "kami-autodrive",
    "kami-tilemap",
    "kami-audio",
    "kami-webgpu-rs",
    "kami-pathfind",
    "kami-skeleton",
    "kami-character",
    "kami-scene-graph",
    "kami-postfx",
    "kami-input",
    "kami-devtools",
    "kami-demo",
    "kami-vrm",
    "kami-rtc",
    "kami-bridge",
    "kami-os",
    "kami-eng-core",
    "kami-eng-render",
    "kami-eda",
    "kami-cad",
    "kami-cad-import",
    "kami-cam",
    "kami-cam-scene",
    "kami-rtl",
    "kami-cae",
    "kami-eng-io",
    "kami-eng-web",
    "kami-mine-pds",
    "kami-mine-ai",
    "kami-pnr",
    "kami-dft",
    "kami-spice",
    "kami-pdk",
    "kami-verify",
    "kami-power",
    "kami-si",
    "kami-pkg",
    "kami-yield",
    "kami-ip",
    "kami-flow",
    "kami-terrain",
    "kami-atmosphere",
    "kami-vegetation",
    "kami-app",
    "kami-pipelines",
    "kami-dec",
    "kami-app-isekai",
    "kami-app-quarry-walk",
    "kami-app-car-sim",
    "kami-bim",
    "kami-live",
    "kami-mangaka-scene",
    # ADR-2605261800 (NVIDIA Omniverse stack API-compat layer, R1.0 path reservation)
    "kami-rt",
    "kami-pbrt",
    "kami-usd",
    "kami-genesis",
    "kami-articulated",
    "kami-articulated-scene",
    "kami-sensor-sim",
    "kami-replicator",
    "kami-app-amenominaka",
    "kami-shugyo",
    # GR00T N1.x foundation-policy compat seat (ADR-0037)
    "kami-groot",
    # ADR-2605261800 §D10.4 contingent fallback crates (activated only on Council Lv6+ attestation
    # after Genesis / Mitsuba 3 / tinyusdz upstream WebGPU+WASM viability gate failure)
    "kami-physics-solvers",
    "kami-rtx-native",
    "kami-usd-native",
    # ADR-2605261800 Phase C: WASM cdylib demonstrator
    "kami-cartpole-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# kami-engine-clj / kami-script-runtime
wasm-encoder  = "0.221"
wasmtime      = "22"
hecs = "0.10"
glam = { version = "0.33", features = ["bytemuck", "serde"] }
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "2"
ring = "0.17"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rapier3d = { version = "0.22", features = ["simd-nightly"] }
roxmltree = "0.20"
wasm-bindgen = "0.2"

# glTF 2.0 + asset codecs (kami-render gltf-loader). flate2 uses the pure-Rust
# miniz_oxide backend and image is feature-trimmed so the whole loader stays
# wasm-safe (no C deps); see 90-docs/adr/0032.
gltf = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
