[package]
name = "kami-app-animeka-timeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kami-app       = { path = "../kami-app" }
kami-render    = { path = "../kami-render" }
glam           = { workspace = true }
bytemuck       = { workspace = true }
hecs           = { workspace = true }
log            = { workspace = true }
wgpu           = "24"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen             = { workspace = true }
wasm-bindgen-futures     = "0.4"
web-sys                  = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
console_log              = "1"
