[package]
name = "kami-app-car-sim"
description = "Public car-sim demo (driver.etzhayyim.com) — soft-body sedan with multi-surface map, browser-rendered via the kami-app builder."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kami-app = { path = "../kami-app" }
kami-render = { path = "../kami-render", features = ["wgpu-backend"] }
kami-vehicle = { path = "../kami-vehicle" }
kami-vehicle-scene = { path = "../kami-vehicle-scene" }
kami-atmosphere = { path = "../kami-atmosphere" }
glam = { workspace = true }
bytemuck = { workspace = true }
hecs = { workspace = true }
log = { workspace = true }
wgpu = "24"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
