[package]
name = "kami-app-isekai"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kami-app = { path = "../kami-app" }
kami-pipelines = { path = "../kami-pipelines" }
kami-dec = { path = "../kami-dec" }
kami-render = { path = "../kami-render" }
kami-terrain = { path = "../kami-terrain" }
# Executor edge (ADR-0044/0046): Plains biome loads from kami-terrain-scene's biomes.edn.
kami-terrain-scene = { path = "../kami-terrain-scene" }
# Omniverse / PhysX / OpenUSD nv-compat facade (ADR-2605261800 §D10.3).
kami-usd = { path = "../kami-usd" }
kami-genesis = { path = "../kami-genesis" }
kami-articulated = { path = "../kami-articulated" }
glam = { workspace = true }
bytemuck = { workspace = true }
hecs = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
wgpu = "24"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
console_log = "1"
