[package]
name = "kami-app-live"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# kami-app-live — Reference WASM entry for live.gftd.ai.
#
# Composes:
#   kami-pipelines::{SkyAdapter, TerrainAdapter, WaterAdapter,
#                    AtlasVisAdapter, ParticleAdapter}
# with the pure-Rust `kami-live::LiveShow` orchestrator. No new GPU
# pipelines are introduced — the visual response (lasers, sparkles,
# crowd cheers, confetti) routes through the existing N1-N6 atlas /
# particle systems shared with isekai/quarry-walk.

[dependencies]
kami-app = { path = "../kami-app" }
kami-pipelines = { path = "../kami-pipelines" }
kami-terrain = { path = "../kami-terrain" }
kami-render = { path = "../kami-render" }
kami-live = { path = "../kami-live" }
glam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document"] }
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
