[package]
name = "kami-app-quarry-walk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# Second reference game on the kami-app Builder SDK. Reuses
# `kami-pipelines::{SkyAdapter, TerrainAdapter}` to validate that the
# engine topology supports multi-game composition without duplicating
# render code.
#
# Differences vs ISEKAI:
#   - biome = Quarry (rocky mesa, warm palette, sparse dry grass)
#   - seed  = 77 (same as legacy run_with_quarry_walk)
#   - spawn higher to see the ridges

[dependencies]
kami-app = { path = "../kami-app" }
kami-pipelines = { path = "../kami-pipelines" }
kami-terrain = { path = "../kami-terrain" }
# Executor edge (ADR-0044/0046): the Quarry biome loads from kami-terrain-scene's
# biomes.edn, falling back to the compiled-in BiomePreset::Quarry.
kami-terrain-scene = { path = "../kami-terrain-scene" }
log = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
console_log = "1"
