[package]
name = "kami-app-tatekata"
description = "tatekata 建方 — robotic construction of the giemon factory: each 4D step's assigned 施工ロボット builds it on kami-genesis, with concrete-deposition + weld material-process fields (ADR-2606010030, ADR-2605250715)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kami-app = { path = "../kami-app" }
kami-pipelines = { path = "../kami-pipelines" }
kami-render = { path = "../kami-render" }
kami-genesis = { path = "../kami-genesis" }
kami-articulated = { path = "../kami-articulated" }
kami-app-giemon-factory = { path = "../kami-app-giemon-factory" }
glam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
