[package]
name = "kami-cad"
description = "KAMI CAD kernel — BREP solid modeling, parametric feature tree, assembly solver, STEP/IGES exchange, tessellation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
hecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
kami-eng-core = { path = "../kami-eng-core" }
kami-eng-render = { path = "../kami-eng-render" }
kami-sdf = { path = "../kami-sdf" }
kami-mesher = { path = "../kami-mesher" }
kami-gltf = { path = "../kami-gltf" }
