[package]
name = "kami-cae"
description = "KAMI Engineering SDK — CAE: FEA mesh generation, boundary conditions, material library, solvers (linear static / modal / thermal), post-processing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
kami-eng-core = { path = "../kami-eng-core" }
kami-eng-render = { path = "../kami-eng-render" }
