[package]
name = "kami-cam"
description = "KAMI CAM — Computer-Aided Manufacturing: toolpath generation, G-code output, tool library, stock definition, CNC post-processor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
kami-eng-core = { path = "../kami-eng-core" }
kami-eng-render = { path = "../kami-eng-render" }
