[package]
name = "kami-character"
version = "0.1.0"
edition = "2021"
description = "KAMI Character Maker — parametric photo-real mesh generation"

[dependencies]
glam = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
kami-skeleton = { path = "../kami-skeleton" }
kami-gltf = { path = "../kami-gltf" }
kami-render = { path = "../kami-render", default-features = false }

[dev-dependencies]
