[package]
name = "kami-clj-play"
version.workspace = true
edition.workspace = true
description = "kami-clj-play — native windowed player (winit + wgpu) that runs a kami-clj/EDN game on the desktop host. The 'mac' target of ADR-0037, with a window: same CLJ game, same script-runtime host, drawn on screen."

[[bin]]
name = "kami-clj-play"
path = "src/main.rs"

[dependencies]
# The player forwards the WASM-backend choice to the host crate, so the SAME
# rendered game runs under wasmtime (JIT) or wasmi (no-JIT, the iOS/console path):
#   cargo run --target aarch64-apple-darwin -p kami-clj-play          # wasmtime
#   cargo run --target aarch64-apple-darwin -p kami-clj-play \
#       --no-default-features --features backend-wasmi               # wasmi (no JIT)
kami-script-runtime = { path = "../kami-script-runtime", default-features = false }
kami-core = { path = "../kami-core" }
kotoba-edn = { path = "../../kotoba/crates/kotoba-edn" }     # parse the Datomic-shaped scene.edn
kami-scene = { path = "../kami-scene" }
hecs      = { workspace = true }
wgpu      = "24"
winit     = "0.30"
pollster  = "0.4"
bytemuck  = { workspace = true }

[features]
default          = ["backend-wasmtime"]
backend-wasmtime = ["kami-script-runtime/backend-wasmtime"]
backend-wasmi    = ["kami-script-runtime/backend-wasmi"]
