[package]
name = "kami-demo"
version.workspace = true
edition.workspace = true

[dependencies]
kami-engine = { path = "../kami-engine" }
kami-render = { path = "../kami-render", features = ["wgpu-backend"] }
kami-core = { path = "../kami-core" }
kami-knp = { path = "../kami-knp" }
glam = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
wgpu = "24"
winit = "0.30"
pollster = "0.4"
