[package]
name = "kami-dft"
description = "KAMI design-for-test — scan chain insertion, BIST generation, ATPG pattern generation, and JTAG/BSDL support"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
