[package]
name = "kami-eda"
description = "KAMI EDA — schematic editor, PCB layout, netlist generation, BOM export, ERC/DRC validation, Gerber export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true }
hecs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
kami-eng-core = { path = "../kami-eng-core" }
kami-eng-render = { path = "../kami-eng-render" }
kami-graph = { path = "../kami-graph" }
